--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Don Sin">
 <meta name="author" content="Peter Loewen">
 <meta name="author" content="Mohsen Sadatsafavi">
-<meta name="dcterms.date" content="2024-10-21">
+<meta name="dcterms.date" content="2024-10-22">
 
 <title>Who Is Healthy Anyways</title>
 <style>
@@ -77,7 +77,7 @@ div.csl-indent {
   <li><a href="#methods" id="toc-methods" class="nav-link" data-scroll-target="#methods">Methods</a></li>
   <li><a href="#results" id="toc-results" class="nav-link" data-scroll-target="#results">Results</a>
   <ul class="collapse">
-  <li><a href="#home-ownership-bmi-and-occupation" id="toc-home-ownership-bmi-and-occupation" class="nav-link" data-scroll-target="#home-ownership-bmi-and-occupation">Home Ownership, BMI and Occupation</a></li>
+  <li><a href="#home-ownership-bmi-and-occupation" id="toc-home-ownership-bmi-and-occupation" class="nav-link" data-scroll-target="#home-ownership-bmi-and-occupation">Home Ownership, BMI, and Occupation</a></li>
   <li><a href="#income-to-poverty-ratio" id="toc-income-to-poverty-ratio" class="nav-link" data-scroll-target="#income-to-poverty-ratio">Income to Poverty Ratio</a></li>
   </ul></li>
   <li><a href="#discussion" id="toc-discussion" class="nav-link" data-scroll-target="#discussion">Discussion</a></li>
@@ -86,7 +86,6 @@ div.csl-indent {
   <li><a href="#appendices" id="toc-appendices" class="nav-link" data-scroll-target="#appendices">Appendices</a>
   <ul class="collapse">
   <li><a href="#effect-of-home-ownership" id="toc-effect-of-home-ownership" class="nav-link" data-scroll-target="#effect-of-home-ownership">Effect of Home Ownership</a></li>
-  <li><a href="#separate-analysis-based-on-sex" id="toc-separate-analysis-based-on-sex" class="nav-link" data-scroll-target="#separate-analysis-based-on-sex">Separate Analysis based on Sex</a></li>
   <li><a href="#establishing-the-order-of-exclusion" id="toc-establishing-the-order-of-exclusion" class="nav-link" data-scroll-target="#establishing-the-order-of-exclusion">Establishing the order of exclusion</a></li>
   <li><a href="#alternative-order-of-reference-values" id="toc-alternative-order-of-reference-values" class="nav-link" data-scroll-target="#alternative-order-of-reference-values">Alternative Order of Reference Values</a></li>
   <li><a href="#non-cumulative-exclusion" id="toc-non-cumulative-exclusion" class="nav-link" data-scroll-target="#non-cumulative-exclusion">Non-Cumulative Exclusion</a></li>
@@ -178,7 +177,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 21, 2024</p>
+      <p class="date">October 22, 2024</p>
     </div>
   </div>
   
@@ -644,7 +643,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 </div>
 </div>
 <!--The flow of participants is shown in @fig-flowchart.-->
-<p>From the base reference population to the most restrictive, the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in <a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;1</a> . After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 26% and 19% in adults, and 25% and 26% in youth .</p>
+<p>From the base reference population to the most restrictive, the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in <a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;1</a>. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 26% and 19% in adults, and 25% and 26% in youth.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-racialgap" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -659,9 +658,38 @@ Figure&nbsp;1: Changes in lung function racial gaps in successively more restric
 </div>
 </div>
 </div>
+<p>We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 27% and 20% in adults, and 16% and 19% in youth, as shown in <a href="#fig-females" class="quarto-xref">Figure&nbsp;2</a>. In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 14% and 8% in adults, and 35% and 34% in youth, as shown in <a href="#fig-males" class="quarto-xref">Figure&nbsp;3</a>.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-females" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="who-is-healthy-anyways_files/figure-html/fig-females-1.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;2: Changes in lung function racial gaps for female participants
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-males" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="who-is-healthy-anyways_files/figure-html/fig-males-1.png" class="img-fluid figure-img" width="672">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;3: Changes in lung function racial gaps for male participants
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
 <section id="home-ownership-bmi-and-occupation" class="level3">
-<h3 class="anchored" data-anchor-id="home-ownership-bmi-and-occupation">Home Ownership, BMI and Occupation</h3>
-<p>After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in <a href="#fig-racialgap-home-bmi-job" class="quarto-xref">Figure&nbsp;2</a>. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 20% and 16% in adults, and 21% and 19% in youth.</p>
+<h3 class="anchored" data-anchor-id="home-ownership-bmi-and-occupation">Home Ownership, BMI, and Occupation</h3>
+<p>After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in <a href="#fig-racialgap-home-bmi-job" class="quarto-xref">Figure&nbsp;4</a>. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 20% and 16% in adults, and 21% and 19% in youth.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-racialgap-home-bmi-job" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -670,7 +698,7 @@ Figure&nbsp;1: Changes in lung function racial gaps in successively more restric
 <img src="who-is-healthy-anyways_files/figure-html/fig-racialgap-home-bmi-job-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-racialgap-home-bmi-job-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;2: Changes in lung function racial gaps after exclusions based on home ownership, BMI, and occupation
+Figure&nbsp;4: Changes in lung function racial gaps after exclusions based on home ownership, BMI, and occupation
 </figcaption>
 </figure>
 </div>
@@ -679,7 +707,7 @@ Figure&nbsp;2: Changes in lung function racial gaps after exclusions based on ho
 </section>
 <section id="income-to-poverty-ratio" class="level3">
 <h3 class="anchored" data-anchor-id="income-to-poverty-ratio">Income to Poverty Ratio</h3>
-<p>After excluding participants with income to poverty ratio under five, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 8% in adults, as shown in <a href="#fig-incomepovertyratio" class="quarto-xref">Figure&nbsp;3</a>. The proportion of racial gap in FEV<sub>1</sub> and FVC that was explained by poverty was 6% and 0% in adults, and 4% and 2% in youth.</p>
+<p>When we excluded participants with income to poverty ratio under five, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 8% in adults, as shown in <a href="#fig-incomepovertyratio" class="quarto-xref">Figure&nbsp;5</a>. The proportion of racial gap in FEV<sub>1</sub> and FVC that was explained by poverty was 6% and 0% in adults, and 4% and 2% in youth.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-incomepovertyratio" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -688,7 +716,7 @@ Figure&nbsp;2: Changes in lung function racial gaps after exclusions based on ho
 <img src="who-is-healthy-anyways_files/figure-html/fig-incomepovertyratio-1.png" class="img-fluid figure-img" width="672">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-incomepovertyratio-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;3: Changes in lung function racial gaps based on income to poverty ratio
+Figure&nbsp;5: Changes in lung function racial gaps based on income to poverty ratio
 </figcaption>
 </figure>
 </div>
@@ -785,136 +813,11 @@ Ignoring unknown aesthetics: fill</code></pre>
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-10-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
-</section>
-<section id="separate-analysis-based-on-sex" class="level3">
-<h3 class="anchored" data-anchor-id="separate-analysis-based-on-sex">Separate Analysis based on Sex</h3>
-<section id="females" class="level4">
-<h4 class="anchored" data-anchor-id="females">Females</h4>
-<div class="cell">
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in createCohort("adult", sex = "female"): only females are included.</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES N (excluding missing or low quality spiro: 8571</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES Black and White N (excluding missing or low quality spiro: 5314</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>adult-NHANES : 3864</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in createCohort("youth", sex = "female"): only females are included.</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES N (excluding missing or low quality spiro: 8571</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES Black and White N (excluding missing or low quality spiro: 5314</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>youth-NHANES : 1450</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FEV1 in adults, the reduction in gap was -0.27</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FVC in adults, the reduction in gap was -0.2</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FEV1 in youth, the reduction in gap was -0.16</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FVC in youth, the reduction in gap was -0.19</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in geom_text(aes(x = ref, y = perc, fill = race_text_nhanes, label =
-scales::percent(perc, : Ignoring unknown aesthetics: fill</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in geom_text(aes(x = ref, y = perc, fill = race_text_nhanes, label =
-scales::percent(perc, : Ignoring unknown aesthetics: fill</code></pre>
-</div>
-<div class="cell-output-display">
-<div id="fig-females" class="quarto-float quarto-figure quarto-figure-center anchored">
-<figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="who-is-healthy-anyways_files/figure-html/fig-females-1.png" class="img-fluid figure-img" width="672">
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;4: Changes in lung function racial gaps for female participants
-</figcaption>
-</figure>
-</div>
-</div>
-</div>
-</section>
-<section id="males" class="level4">
-<h4 class="anchored" data-anchor-id="males">Males</h4>
-<div class="cell">
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in createCohort("adult", sex = "male"): only males are included.</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES N (excluding missing or low quality spiro: 8461</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES Black and White N (excluding missing or low quality spiro: 5143</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>adult-NHANES : 3669</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in createCohort("youth", sex = "male"): only males are included.</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES N (excluding missing or low quality spiro: 8461</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>NHANES Black and White N (excluding missing or low quality spiro: 5143</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>youth-NHANES : 1474</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FEV1 in adults, the reduction in gap was -0.14</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FVC in adults, the reduction in gap was -0.08</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FEV1 in youth, the reduction in gap was -0.35</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>For FVC in youth, the reduction in gap was -0.34</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in geom_text(aes(x = ref, y = perc, fill = race_text_nhanes, label =
-scales::percent(perc, : Ignoring unknown aesthetics: fill</code></pre>
-</div>
-<div class="cell-output cell-output-stderr">
-<pre><code>Warning in geom_text(aes(x = ref, y = perc, fill = race_text_nhanes, label =
-scales::percent(perc, : Ignoring unknown aesthetics: fill</code></pre>
-</div>
-<div class="cell-output-display">
-<div id="fig-males" class="quarto-float quarto-figure quarto-figure-center anchored">
-<figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="who-is-healthy-anyways_files/figure-html/fig-males-1.png" class="img-fluid figure-img" width="672">
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;5: Changes in lung function racial gaps for male participants
-</figcaption>
-</figure>
-</div>
-</div>
-</div>
-</section>
 </section>
 <section id="establishing-the-order-of-exclusion" class="level3">
 <h3 class="anchored" data-anchor-id="establishing-the-order-of-exclusion">Establishing the order of exclusion</h3>
