--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -77,6 +77,7 @@ div.csl-indent {
   <li><a href="#methods" id="toc-methods" class="nav-link" data-scroll-target="#methods">Methods</a></li>
   <li><a href="#results" id="toc-results" class="nav-link" data-scroll-target="#results">Results</a>
   <ul class="collapse">
+  <li><a href="#biological-sex" id="toc-biological-sex" class="nav-link" data-scroll-target="#biological-sex">Biological Sex</a></li>
   <li><a href="#home-ownership-bmi-and-occupation" id="toc-home-ownership-bmi-and-occupation" class="nav-link" data-scroll-target="#home-ownership-bmi-and-occupation">Home Ownership, BMI, and Occupation</a></li>
   <li><a href="#income-to-poverty-ratio" id="toc-income-to-poverty-ratio" class="nav-link" data-scroll-target="#income-to-poverty-ratio">Income to Poverty Ratio</a></li>
   </ul></li>
@@ -658,6 +659,8 @@ Figure&nbsp;1: Changes in lung function racial gaps in successively more restric
 </div>
 </div>
 </div>
+<section id="biological-sex" class="level3">
+<h3 class="anchored" data-anchor-id="biological-sex">Biological Sex</h3>
 <p>We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 27% and 20% in adults, and 16% and 19% in youth, as shown in <a href="#fig-females" class="quarto-xref">Figure&nbsp;2</a>. In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 14% and 8% in adults, and 35% and 34% in youth, as shown in <a href="#fig-males" class="quarto-xref">Figure&nbsp;3</a>.</p>
 <div class="cell">
 <div class="cell-output-display">
@@ -687,6 +690,7 @@ Figure&nbsp;3: Changes in lung function racial gaps for male participants
 </div>
 </div>
 </div>
+</section>
 <section id="home-ownership-bmi-and-occupation" class="level3">
 <h3 class="anchored" data-anchor-id="home-ownership-bmi-and-occupation">Home Ownership, BMI, and Occupation</h3>
 <p>After excluding patients solely based on home ownership, BMI, and occupation, the proportion of Black participants decreased from 19% to 10% in youth and 14% to 11% in adults, as shown in <a href="#fig-racialgap-home-bmi-job" class="quarto-xref">Figure&nbsp;4</a>. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 20% and 16% in adults, and 21% and 19% in youth.</p>
@@ -722,16 +726,18 @@ Figure&nbsp;5: Changes in lung function racial gaps based on income to poverty r
 </div>
 </div>
 </div>
+<p>In the supplementary material, we also explored the intersection of self-identified race and country of origin.</p>
 </section>
 </section>
 <section id="discussion" class="level2">
 <h2 class="anchored" data-anchor-id="discussion">Discussion</h2>
 <p>The effects of social determinants of health on lung function, these have been discussed in the literature for decades. The 1991 official statements of the ATS on lung function testing discussed the effects of environmental factors, smoking, indoor and outdoor air pollution, occupational exposures, built environment and socio-economic factors as one of the main sources of variability in lung function<span class="citation" data-cites="lungfun1991">[<a href="#ref-lungfun1991" role="doc-biblioref">10</a>]</span>. A 1986 review of between-individual variation in FVC attributed up to 30% of variation to biological sex, up to 30% to age, height, and weight, 10% to race, 3% to measurement error, and 27% to unexplained factors<span class="citation" data-cites="becklake1986">[<a href="#ref-becklake1986" role="doc-biblioref">11</a>]</span>. Our study focuses on the proportion of variability that was historically attributed to race can be explained by social determinants of health.</p>
-<p>(Does SDoH affect FEV1 beyond race?)</p>
+<p>[Does SDoH affect FEV1 beyond race?]</p>
 <p>Our study has several major limitations. Our results reflect American surveys and cannot necessarily be generalized beyond the U.S. Our analysis was limited by the data collected and available in NHANES study and our current understanding of SDoH, which is incomplete and evolving. As such, we were unable to evaluate results for nuanced race groups, or account for several important SDoH and environmental exposures, including intergenerational effects of wealth, and deprivation, early-life exposure to pollutants, and built environment. We also had no data on gender identity, etc, etc.</p>
 </section>
 <section id="conclusions" class="level2">
 <h2 class="anchored" data-anchor-id="conclusions">Conclusions</h2>
+<p>Our study shows that a larger proportion of racial gaps in lung function can be explained by social determinants of health than previously reported. This suggests that interventions to reduce racial disparities in lung function should focus on addressing social determinants of health.</p>
 </section>
 <section id="references" class="level2">
 <h2 class="anchored" data-anchor-id="references">References</h2>
