--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Don Sin">
 <meta name="author" content="Peter Loewen">
 <meta name="author" content="Mohsen Sadatsafavi">
-<meta name="dcterms.date" content="2024-10-22">
+<meta name="dcterms.date" content="2024-10-24">
 
 <title>Who Is Healthy Anyways</title>
 <style>
@@ -178,7 +178,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 22, 2024</p>
+      <p class="date">October 24, 2024</p>
     </div>
   </div>
   
@@ -209,7 +209,7 @@ div.csl-indent {
 <section id="methods" class="level2">
 <h2 class="anchored" data-anchor-id="methods">Methods</h2>
 <p>We used data from three cycles of the US National Health and Nutrition Examination Survey (NHANES) 2007-2012 to define 10 increasingly healthier reference populations. We included self-identified Black and White individuals with valid height and high-quality spirometry. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with occupational exposures, physical inactivity, maternal smoking, obesity, no home ownership, no insurance, lower education, and unhealthy diet.</p>
-<p>For each reference population, the racial gap was calculated as the average difference between Black and White populations adjusted by age, height, and sex in a linear regression. We evaluated the reduction in the racial gap separately for youth (&lt;20 yrs) and adults (≥20 yrs).</p>
+<p>For each reference population, the racial gap was calculated as the average difference between Black and White populations adjusted by age, height, and sex in a linear regression. We evaluated the reduction in the racial gap separately for youth (&lt;20 yrs) and adults (≥20 yrs). The distinction between adults and youth was made based on how NHANES data is structured; for example, the educational level variable is only available for those 20 years of age and older.</p>
 <p>In the main analysis, we interpreted missing variables permissively and did not excluded anyone based on a missing variable. For example, if someone’s smoking status was unknown, we did not exclude them when excluding smokers. This choice was motivated by statistical efficiency of having a larger number of persons in each consecutive reference population. In the sensitivity analyses, we explored the effects of this value judgment, but conducting analyses with alternative assumptions. We also evaluated the proportion of the racial gap in lung function that can be explained by poverty by assessing the effects of sequentially restricting the reference population to those with income-to-poverty ratios of equal or larger than 1, 1.5, 2, 2.5, up to 5.</p>
 <p>In the sensitivity analyses, we evaluated the results separately for males and females, those born outside of the U.S. versus those who were born in the U.S., and other groups of self-identified race and ethnicity.</p>
 </section>
@@ -734,6 +734,7 @@ Figure&nbsp;5: Changes in lung function racial gaps based on income to poverty r
 <p>The effects of social determinants of health on lung function, these have been discussed in the literature for decades. The 1991 official statements of the ATS on lung function testing discussed the effects of environmental factors, smoking, indoor and outdoor air pollution, occupational exposures, built environment and socio-economic factors as one of the main sources of variability in lung function<span class="citation" data-cites="lungfun1991">[<a href="#ref-lungfun1991" role="doc-biblioref">10</a>]</span>. A 1986 review of between-individual variation in FVC attributed up to 30% of variation to biological sex, up to 30% to age, height, and weight, 10% to race, 3% to measurement error, and 27% to unexplained factors<span class="citation" data-cites="becklake1986">[<a href="#ref-becklake1986" role="doc-biblioref">11</a>]</span>. Our study focuses on the proportion of variability that was historically attributed to race can be explained by social determinants of health.</p>
 <p>We found that social determinants of health measured in NHANES data accounts for up to 26% of racial gap in lung function. The explained proportion rose to 35% in males under 20 years of age. [Interpretation?]</p>
 <p>The explained proportion was also higher in Black individuals who were born in the US, with up to 36% of the racial gap in adult FEV<sub>1</sub> explained by the studied social determinants of health. This points to the more significant role for the effects of racism, segregation, red-zoning, and other social determinants of health in explaining racial disparities in lung function in the US.</p>
+<p>Our exploratory analysis showed the excluding those based on home ownership, BMI, and occupational exposures explain the vast majority of explainable racial gap.</p>
 <p>[Does SDoH affect FEV1 beyond race?]</p>
 <p>Our study has several major limitations. Our results reflect American surveys and cannot necessarily be generalized beyond the U.S. Our analysis was limited by the data collected and available in NHANES study and our current understanding of SDoH, which is incomplete and evolving. As such, we were unable to evaluate results for nuanced race groups, or account for several important SDoH and environmental exposures, including intergenerational effects of wealth, and deprivation, early-life exposure to pollutants, and built environment. We also had no data on gender identity, etc, etc.</p>
 </section>
