code more efficient

--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -77,6 +77,7 @@ div.csl-indent {
   <li><a href="#methods" id="toc-methods" class="nav-link" data-scroll-target="#methods">Methods</a></li>
   <li><a href="#results" id="toc-results" class="nav-link" data-scroll-target="#results">Results</a>
   <ul class="collapse">
+  <li><a href="#reference-equations" id="toc-reference-equations" class="nav-link" data-scroll-target="#reference-equations">Reference Equations</a></li>
   <li><a href="#biological-sex" id="toc-biological-sex" class="nav-link" data-scroll-target="#biological-sex">Biological Sex</a></li>
   <li><a href="#home-ownership-bmi-and-occupation" id="toc-home-ownership-bmi-and-occupation" class="nav-link" data-scroll-target="#home-ownership-bmi-and-occupation">Home Ownership, BMI, and Occupation</a></li>
   <li><a href="#income-to-poverty-ratio" id="toc-income-to-poverty-ratio" class="nav-link" data-scroll-target="#income-to-poverty-ratio">Income to Poverty Ratio</a></li>
@@ -281,22 +282,22 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">6726 (64.3%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">sex</td>
+<td class="rowlabel firstrow">sex_text</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 </tr>
 <tr class="even">
-<td class="rowlabel">1</td>
-<td>3669 (48.7%)</td>
-<td>1474 (50.4%)</td>
-<td>5143 (49.2%)</td>
+<td class="rowlabel">Female</td>
+<td>3864 (51.3%)</td>
+<td>1450 (49.6%)</td>
+<td>5314 (50.8%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel lastrow">2</td>
-<td class="lastrow">3864 (51.3%)</td>
-<td class="lastrow">1450 (49.6%)</td>
-<td class="lastrow">5314 (50.8%)</td>
+<td class="rowlabel lastrow">Male</td>
+<td class="lastrow">3669 (48.7%)</td>
+<td class="lastrow">1474 (50.4%)</td>
+<td class="lastrow">5143 (49.2%)</td>
 </tr>
 <tr class="even">
 <td class="rowlabel firstrow">smoker</td>
@@ -659,6 +660,9 @@ Figure&nbsp;1: Changes in lung function racial gaps in successively more restric
 </div>
 </div>
 </div>
+<section id="reference-equations" class="level3">
+<h3 class="anchored" data-anchor-id="reference-equations">Reference Equations</h3>
+</section>
 <section id="biological-sex" class="level3">
 <h3 class="anchored" data-anchor-id="biological-sex">Biological Sex</h3>
 <p>We also looked at the racial gap in lung function from the most permissive to the most restrictive reference population, separately for females and males. In females, the proportion of Black participants decreased from 20% to 10% in youth and 15% to 5% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 27% and 20% in adults, and 16% and 19% in youth, as shown in <a href="#fig-females" class="quarto-xref">Figure&nbsp;2</a>. In males, the proportion of Black participants decreased from 17% to 8% in youth and 12% to 4% in adults. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 14% and 8% in adults, and 35% and 34% in youth, as shown in <a href="#fig-males" class="quarto-xref">Figure&nbsp;3</a>.</p>
