first draft shared with Mohsen

--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -14,7 +14,7 @@
 <meta name="author" content="Mohsen Sadatsafavi">
 <meta name="dcterms.date" content="2024-10-24">
 
-<title>Who Is Healthy Anyways</title>
+<title>Who is healthy anyways? The effect of health disparities on racial gaps in lung function</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -96,7 +96,7 @@ div.csl-indent {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Who Is Healthy Anyways</h1>
+<h1 class="title">Who is healthy anyways? The effect of health disparities on racial gaps in lung function</h1>
 </div>
 
 
