--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -84,8 +84,8 @@ div.csl-indent {
   <li><a href="#references" id="toc-references" class="nav-link" data-scroll-target="#references">References</a></li>
   <li><a href="#appendices" id="toc-appendices" class="nav-link" data-scroll-target="#appendices">Appendices</a>
   <ul class="collapse">
+  <li><a href="#participant-characteristics-by-race" id="toc-participant-characteristics-by-race" class="nav-link" data-scroll-target="#participant-characteristics-by-race">Participant characteristics by Race</a></li>
   <li><a href="#separate-analysis-by-biological-sex" id="toc-separate-analysis-by-biological-sex" class="nav-link" data-scroll-target="#separate-analysis-by-biological-sex">Separate Analysis by Biological Sex</a></li>
-  <li><a href="#table-1-by-self-identified-race" id="toc-table-1-by-self-identified-race" class="nav-link" data-scroll-target="#table-1-by-self-identified-race">Table 1 by Self-Identified Race</a></li>
   <li><a href="#intersection-of-race-and-country-of-birth" id="toc-intersection-of-race-and-country-of-birth" class="nav-link" data-scroll-target="#intersection-of-race-and-country-of-birth">Intersection of Race and Country of Birth</a></li>
   <li><a href="#income-to-poverty-ratio" id="toc-income-to-poverty-ratio" class="nav-link" data-scroll-target="#income-to-poverty-ratio">Income to Poverty Ratio</a></li>
   </ul></li>
@@ -1102,47 +1102,11 @@ Figure&nbsp;2: Changes in lung function racial gaps after exclusions based on ho
 </section>
 <section id="appendices" class="level2">
 <h2 class="anchored" data-anchor-id="appendices">Appendices</h2>
-<section id="separate-analysis-by-biological-sex" class="level3">
-<h3 class="anchored" data-anchor-id="separate-analysis-by-biological-sex">Separate Analysis by Biological Sex</h3>
-<div id="suppfig-females" class="quarto-float quarto-figure quarto-figure-center anchored">
-<figure class="quarto-float quarto-float-suppfig figure">
-<div aria-describedby="suppfig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-7-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-suppfig" id="suppfig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure S1: Changes in lung function racial gaps for female participants
-</figcaption>
-</figure>
-</div>
-<div id="suppfig-males" class="quarto-float quarto-figure quarto-figure-center anchored">
-<figure class="quarto-float quarto-float-suppfig figure">
-<div aria-describedby="suppfig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-suppfig" id="suppfig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure S2: Changes in lung function racial gaps for male participants
-</figcaption>
-</figure>
-</div>
-</section>
-<section id="table-1-by-self-identified-race" class="level3">
-<h3 class="anchored" data-anchor-id="table-1-by-self-identified-race">Table 1 by Self-Identified Race</h3>
+<section id="participant-characteristics-by-race" class="level3">
+<h3 class="anchored" data-anchor-id="participant-characteristics-by-race">Participant characteristics by Race</h3>
+<div id="supptab-missing-ness-by-race" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-supptab figure">
+<div aria-describedby="supptab-missing-ness-by-race-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell">
 <div class="cell-output-display">
 <div class="Rtable1">
@@ -1914,6 +1878,51 @@ Figure S2: Changes in lung function racial gaps for male participants
 
 </div>
 </div>
+</div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-supptab" id="supptab-missing-ness-by-race-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Table S1: Table 1 by self-identified race
+</figcaption>
+</figure>
+</div>
+</section>
+<section id="separate-analysis-by-biological-sex" class="level3">
+<h3 class="anchored" data-anchor-id="separate-analysis-by-biological-sex">Separate Analysis by Biological Sex</h3>
+<div id="suppfig-females" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-suppfig figure">
+<div aria-describedby="suppfig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-suppfig" id="suppfig-females-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure S1: Changes in lung function racial gaps for female participants
+</figcaption>
+</figure>
+</div>
+<div id="suppfig-males" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-float-suppfig figure">
+<div aria-describedby="suppfig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="who-is-healthy-anyways_files/figure-html/unnamed-chunk-9-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-suppfig" id="suppfig-males-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure S2: Changes in lung function racial gaps for male participants
+</figcaption>
+</figure>
 </div>
 </section>
 <section id="intersection-of-race-and-country-of-birth" class="level3">
