--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -203,9 +203,10 @@ div.csl-indent {
 </section>
 <section id="methods" class="level2">
 <h2 class="anchored" data-anchor-id="methods">Methods</h2>
-<p>We used data from three cycles of NHANES (2007-2012) to define 10 increasingly healthier reference populations. We included self-identified Black and White individuals with valid height recording and high-quality spirometry. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmeed occupational exposures, physical inactivity, maternal smoking, obesity, no home ownership, no insurance, lower education, and unhealthy diet.</p>
+<p>We used data from three cycles of NHANES (2007-2012) to define 10 increasingly healthier reference populations. We included self-identified Black and White individuals with valid height recording and high-quality spirometry. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-declared unhealthy diet.</p>
 <p>For each reference population, the racial gap was calculated as the average difference between Black and White populations adjusted by age, height, and sex in a linear regression. We evaluated the reduction in the racial gap separately for youth (&lt;20 yrs) and adults (≥20 yrs). The distinction between adults and youth was made based on how NHANES data is structured; for example, the educational level variable is only available for those 20 years of age and older.</p>
-<p>In the sensitivity analyses, we evaluated the results separately for males and females, those born outside of the U.S. versus those who were born in the U.S., and other groups of self-identified race and ethnicity. We also evaluated the proportion of the racial gap in lung function that can be explained by poverty alone. To due this, we assessed the effects of sequentially restricting the reference population to those with income-to-poverty ratios of equal or larger than 1, 1.5, 2, 2.5, up to 5.</p>
+<p>In the sensitivity analyses, we evaluated the results separately for males and females and those born inside the US. We also evaluated the proportion of the racial gap in lung function that can be explained by poverty alone.</p>
+<p>All data preparation and analysis was performed in R v4.4.2 using reproducible Quarto documents. A fully reproducible analysis code is publicly available at <a href="https://github.com/aminadibi/who-is-healthy-anyways/" class="uri">https://github.com/aminadibi/who-is-healthy-anyways/</a>.</p>
 </section>
 <section id="results" class="level2">
 <h2 class="anchored" data-anchor-id="results">Results</h2>
@@ -1096,7 +1097,7 @@ Figure&nbsp;2: Changes in lung function racial gaps after exclusions based on ho
 <div class="csl-left-margin">14 </div><div class="csl-right-inline">Harik-Khan RI. Racial Difference in Lung Function in African-American and White Children: Effect of Anthropometric, Socioeconomic, Nutritional, and Environmental Factors. <em>American Journal of Epidemiology</em> [Internet] 2004; 160: 893–900. Available from: <a href="http://dx.doi.org/10.1093/aje/kwh297">http://dx.doi.org/10.1093/aje/kwh297</a>.</div>
 </div>
 <div id="ref-adibi2024" class="csl-entry" role="listitem">
-<div class="csl-left-margin">15 </div><div class="csl-right-inline">Adibi A, Carlsten C, Brigham E, <em>et al.</em> The effect of health disparities on racial gaps in lung function. <em>Epidemiology</em> [Internet] 2024; : OA5572. Available from: <a href="http://dx.doi.org/10.1183/13993003.congress-2024.OA5572">http://dx.doi.org/10.1183/13993003.congress-2024.OA5572</a>.</div>
+<div class="csl-left-margin">15 </div><div class="csl-right-inline">Adibi A, Carlsten C, Brigham E, <em>et al.</em> The effect of health disparities on racial gaps in lung function. <em>European Respiratory Journal</em> [Internet] Eur Respir J; 2024; 64. Available from: <a href="https://publications.ersnet.org//content/erj/64/suppl_68/OA5572">https://publications.ersnet.org//content/erj/64/suppl_68/OA5572</a>.</div>
 </div>
 </div>
 </section>
