--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -270,7 +270,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 </thead>
 <tbody>
 <tr class="odd">
-<td class="rowlabel firstrow">age</td>
+<td class="rowlabel firstrow">Age (years)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -288,7 +288,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">25.0 [6.00, 79.0]</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">race_text_nhanes</td>
+<td class="rowlabel firstrow">Race and Ethnicity</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -306,7 +306,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">2954 (61.0%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">sex_text</td>
+<td class="rowlabel firstrow">Biological Sex at Birth</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -324,7 +324,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">2211 (45.7%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">fev1</td>
+<td class="rowlabel firstrow">FEV1 (L)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -342,7 +342,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">2.88 [0.815, 6.92]</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">fvc</td>
+<td class="rowlabel firstrow">FVC (L)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -360,7 +360,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">3.51 [1.02, 7.93]</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">smoker_in_household</td>
+<td class="rowlabel firstrow">Smoker in household</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -384,7 +384,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">19 (0.4%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">maternal_smoke</td>
+<td class="rowlabel firstrow">Maternal smoke during pregnancy (For youth)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -408,7 +408,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">3303 (68.2%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">mineral_dusts</td>
+<td class="rowlabel firstrow">Occupational Exposure to Mineral Dusts</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -432,7 +432,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1817 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">organic_dusts</td>
+<td class="rowlabel firstrow">Occupational Exposure to Organic Dusts</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -456,7 +456,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1815 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">exhaust_fumes</td>
+<td class="rowlabel firstrow">Occupational Exposure to Exhaust Fumes</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -480,7 +480,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1814 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">other_fumes</td>
+<td class="rowlabel firstrow">Occupational Exposure to Other Fumes</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -504,7 +504,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1814 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">income_poverty_ratio</td>
+<td class="rowlabel firstrow">Income to Poverty Ratio</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -528,7 +528,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">303 (6.3%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">home_owner</td>
+<td class="rowlabel firstrow">Home Owner</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -546,7 +546,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">4822 (99.6%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">education_adults</td>
+<td class="rowlabel firstrow">Education Level for Adults</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -588,7 +588,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">2060 (42.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">now_attending_school</td>
+<td class="rowlabel firstrow">Currently Attending School (for youth)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -612,7 +612,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">3566 (73.6%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">healthy_diet</td>
+<td class="rowlabel firstrow">Self-evaluated Diet Health</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -654,7 +654,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1564 (32.3%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">vigorous_work</td>
+<td class="rowlabel firstrow">Vigorous Activity at Work (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -678,7 +678,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">moderate_work</td>
+<td class="rowlabel firstrow">Moderate Activity at Work (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -702,7 +702,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">vigorous_recreational</td>
+<td class="rowlabel firstrow">Recreational Vigorous Activity (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -726,7 +726,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">moderate_recreational</td>
+<td class="rowlabel firstrow">Recreational Moderate Activity (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -750,7 +750,7 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">bmi</td>
+<td class="rowlabel firstrow">Body Mass Index</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -933,7 +933,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 </thead>
 <tbody>
 <tr class="odd">
-<td class="rowlabel firstrow">age</td>
+<td class="rowlabel firstrow">Age (years)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -951,7 +951,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">25.0 [6.00, 79.0]</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">race_text_nhanes</td>
+<td class="rowlabel firstrow">Race and Ethnicity</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -969,7 +969,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">2954 (61.0%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">sex_text</td>
+<td class="rowlabel firstrow">Biological Sex at Birth</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -987,7 +987,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">2211 (45.7%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">fev1</td>
+<td class="rowlabel firstrow">FEV1 (L)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1005,7 +1005,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">2.88 [0.815, 6.92]</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">fvc</td>
+<td class="rowlabel firstrow">FVC (L)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1023,7 +1023,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">3.51 [1.02, 7.93]</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">smoker_in_household</td>
+<td class="rowlabel firstrow">Smoker in household</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1047,7 +1047,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">19 (0.4%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">maternal_smoke</td>
+<td class="rowlabel firstrow">Maternal smoke during pregnancy (For youth)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1071,7 +1071,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">3303 (68.2%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">mineral_dusts</td>
+<td class="rowlabel firstrow">Occupational Exposure to Mineral Dusts</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1095,7 +1095,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1817 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">organic_dusts</td>
+<td class="rowlabel firstrow">Occupational Exposure to Organic Dusts</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1119,7 +1119,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1815 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">exhaust_fumes</td>
+<td class="rowlabel firstrow">Occupational Exposure to Exhaust Fumes</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1143,7 +1143,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1814 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">other_fumes</td>
+<td class="rowlabel firstrow">Occupational Exposure to Other Fumes</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1167,7 +1167,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1814 (37.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">income_poverty_ratio</td>
+<td class="rowlabel firstrow">Income to Poverty Ratio</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1191,7 +1191,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">303 (6.3%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">home_owner</td>
+<td class="rowlabel firstrow">Home Owner</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1209,7 +1209,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">4822 (99.6%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">education_adults</td>
+<td class="rowlabel firstrow">Education Level for Adults</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1251,7 +1251,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">2060 (42.5%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">now_attending_school</td>
+<td class="rowlabel firstrow">Currently Attending School (for youth)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1275,7 +1275,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">3566 (73.6%)</td>
 </tr>
 <tr class="even">
-<td class="rowlabel firstrow">healthy_diet</td>
+<td class="rowlabel firstrow">Self-evaluated Diet Health</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1317,7 +1317,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1564 (32.3%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">vigorous_work</td>
+<td class="rowlabel firstrow">Vigorous Activity at Work (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1341,7 +1341,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">moderate_work</td>
+<td class="rowlabel firstrow">Moderate Activity at Work (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1365,7 +1365,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">vigorous_recreational</td>
+<td class="rowlabel firstrow">Recreational Vigorous Activity (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1389,7 +1389,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">moderate_recreational</td>
+<td class="rowlabel firstrow">Recreational Moderate Activity (10 min/week)</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
@@ -1413,7 +1413,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <td class="lastrow">1041 (21.5%)</td>
 </tr>
 <tr class="odd">
-<td class="rowlabel firstrow">bmi</td>
+<td class="rowlabel firstrow">Body Mass Index</td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
 <td class="firstrow"></td>
