--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -245,7 +245,7 @@ Figure&nbsp;1: Flow of participants
 <div id="tbl-table1" class="cell quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-tbl figure">
 <figcaption class="quarto-float-caption-top quarto-float-caption quarto-float-tbl" id="tbl-table1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Table&nbsp;1: Characteristics of Participants Included in the Study
+Table&nbsp;1: Characteristics of Participants Included in the Baseline Reference Population
 </figcaption>
 <div aria-describedby="tbl-table1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output-display">
@@ -277,15 +277,15 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 </tr>
 <tr class="even">
 <td class="rowlabel">Mean (SD)</td>
-<td>45.8 (16.2)</td>
-<td>12.1 (3.84)</td>
-<td>31.5 (20.9)</td>
+<td>46 (16)</td>
+<td>12 (3.8)</td>
+<td>31 (21)</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel lastrow">Median [Min, Max]</td>
-<td class="lastrow">45.0 [20.0, 79.0]</td>
-<td class="lastrow">12.0 [6.00, 19.0]</td>
-<td class="lastrow">25.0 [6.00, 79.0]</td>
+<td class="lastrow">45 [20, 79]</td>
+<td class="lastrow">12 [6.0, 19]</td>
+<td class="lastrow">25 [6.0, 79]</td>
 </tr>
 <tr class="even">
 <td class="rowlabel firstrow">Race and Ethnicity</td>
@@ -331,15 +331,15 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 </tr>
 <tr class="odd">
 <td class="rowlabel">Mean (SD)</td>
-<td>3.18 (0.883)</td>
-<td>2.61 (1.00)</td>
-<td>2.93 (0.976)</td>
+<td>3.2 (0.88)</td>
+<td>2.6 (1.0)</td>
+<td>2.9 (0.98)</td>
 </tr>
 <tr class="even">
 <td class="rowlabel lastrow">Median [Min, Max]</td>
-<td class="lastrow">3.10 [0.815, 6.92]</td>
-<td class="lastrow">2.44 [0.816, 6.14]</td>
-<td class="lastrow">2.88 [0.815, 6.92]</td>
+<td class="lastrow">3.1 [0.82, 6.9]</td>
+<td class="lastrow">2.4 [0.82, 6.1]</td>
+<td class="lastrow">2.9 [0.82, 6.9]</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel firstrow">FVC (L)</td>
@@ -349,15 +349,15 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 </tr>
 <tr class="even">
 <td class="rowlabel">Mean (SD)</td>
-<td>3.99 (1.08)</td>
-<td>3.03 (1.17)</td>
-<td>3.58 (1.22)</td>
+<td>4.0 (1.1)</td>
+<td>3.0 (1.2)</td>
+<td>3.6 (1.2)</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel lastrow">Median [Min, Max]</td>
-<td class="lastrow">3.87 [1.28, 7.93]</td>
-<td class="lastrow">2.87 [1.02, 7.16]</td>
-<td class="lastrow">3.51 [1.02, 7.93]</td>
+<td class="lastrow">3.9 [1.3, 7.9]</td>
+<td class="lastrow">2.9 [1.0, 7.2]</td>
+<td class="lastrow">3.5 [1.0, 7.9]</td>
 </tr>
 <tr class="even">
 <td class="rowlabel firstrow">Smoker in household</td>
@@ -511,15 +511,15 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 </tr>
 <tr class="odd">
 <td class="rowlabel">Mean (SD)</td>
-<td>3.14 (1.65)</td>
-<td>2.34 (1.63)</td>
-<td>2.80 (1.69)</td>
+<td>3.1 (1.6)</td>
+<td>2.3 (1.6)</td>
+<td>2.8 (1.7)</td>
 </tr>
 <tr class="even">
 <td class="rowlabel">Median [Min, Max]</td>
-<td>3.28 [0, 5.00]</td>
-<td>1.87 [0, 5.00]</td>
-<td>2.71 [0, 5.00]</td>
+<td>3.3 [0, 5.0]</td>
+<td>1.9 [0, 5.0]</td>
+<td>2.7 [0, 5.0]</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel lastrow">Missing</td>
@@ -757,15 +757,15 @@ Table&nbsp;1: Characteristics of Participants Included in the Study
 </tr>
 <tr class="even">
 <td class="rowlabel">Mean (SD)</td>
-<td>29.4 (6.89)</td>
-<td>21.2 (5.74)</td>
-<td>25.9 (7.59)</td>
+<td>29 (6.9)</td>
+<td>21 (5.7)</td>
+<td>26 (7.6)</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel">Median [Min, Max]</td>
-<td>28.4 [15.2, 73.4]</td>
-<td>20.0 [12.5, 54.4]</td>
-<td>25.0 [12.5, 73.4]</td>
+<td>28 [15, 73]</td>
+<td>20 [13, 54]</td>
+<td>25 [13, 73]</td>
 </tr>
 <tr class="even">
 <td class="rowlabel lastrow">Missing</td>
@@ -940,15 +940,15 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 </tr>
 <tr class="even">
 <td class="rowlabel">Mean (SD)</td>
-<td>28.8 (19.8)</td>
-<td>33.2 (21.4)</td>
-<td>31.5 (20.9)</td>
+<td>29 (20)</td>
+<td>33 (21)</td>
+<td>31 (21)</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel lastrow">Median [Min, Max]</td>
-<td class="lastrow">20.0 [6.00, 79.0]</td>
-<td class="lastrow">30.0 [6.00, 79.0]</td>
-<td class="lastrow">25.0 [6.00, 79.0]</td>
+<td class="lastrow">20 [6.0, 79]</td>
+<td class="lastrow">30 [6.0, 79]</td>
+<td class="lastrow">25 [6.0, 79]</td>
 </tr>
 <tr class="even">
 <td class="rowlabel firstrow">Race and Ethnicity</td>
@@ -994,15 +994,15 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 </tr>
 <tr class="odd">
 <td class="rowlabel">Mean (SD)</td>
-<td>2.67 (0.871)</td>
-<td>3.10 (1.00)</td>
-<td>2.93 (0.976)</td>
+<td>2.7 (0.87)</td>
+<td>3.1 (1.0)</td>
+<td>2.9 (0.98)</td>
 </tr>
 <tr class="even">
 <td class="rowlabel lastrow">Median [Min, Max]</td>
-<td class="lastrow">2.63 [0.815, 5.60]</td>
-<td class="lastrow">3.08 [0.899, 6.92]</td>
-<td class="lastrow">2.88 [0.815, 6.92]</td>
+<td class="lastrow">2.6 [0.82, 5.6]</td>
+<td class="lastrow">3.1 [0.90, 6.9]</td>
+<td class="lastrow">2.9 [0.82, 6.9]</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel firstrow">FVC (L)</td>
@@ -1012,15 +1012,15 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 </tr>
 <tr class="even">
 <td class="rowlabel">Mean (SD)</td>
-<td>3.21 (1.05)</td>
-<td>3.82 (1.26)</td>
-<td>3.58 (1.22)</td>
+<td>3.2 (1.0)</td>
+<td>3.8 (1.3)</td>
+<td>3.6 (1.2)</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel lastrow">Median [Min, Max]</td>
-<td class="lastrow">3.15 [1.02, 7.00]</td>
-<td class="lastrow">3.79 [1.03, 7.93]</td>
-<td class="lastrow">3.51 [1.02, 7.93]</td>
+<td class="lastrow">3.1 [1.0, 7.0]</td>
+<td class="lastrow">3.8 [1.0, 7.9]</td>
+<td class="lastrow">3.5 [1.0, 7.9]</td>
 </tr>
 <tr class="even">
 <td class="rowlabel firstrow">Smoker in household</td>
@@ -1174,15 +1174,15 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 </tr>
 <tr class="odd">
 <td class="rowlabel">Mean (SD)</td>
-<td>2.29 (1.58)</td>
-<td>3.11 (1.67)</td>
-<td>2.80 (1.69)</td>
+<td>2.3 (1.6)</td>
+<td>3.1 (1.7)</td>
+<td>2.8 (1.7)</td>
 </tr>
 <tr class="even">
 <td class="rowlabel">Median [Min, Max]</td>
-<td>1.85 [0, 5.00]</td>
-<td>3.25 [0, 5.00]</td>
-<td>2.71 [0, 5.00]</td>
+<td>1.9 [0, 5.0]</td>
+<td>3.3 [0, 5.0]</td>
+<td>2.7 [0, 5.0]</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel lastrow">Missing</td>
@@ -1420,15 +1420,15 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 </tr>
 <tr class="even">
 <td class="rowlabel">Mean (SD)</td>
-<td>26.6 (8.12)</td>
-<td>25.5 (7.21)</td>
-<td>25.9 (7.59)</td>
+<td>27 (8.1)</td>
+<td>26 (7.2)</td>
+<td>26 (7.6)</td>
 </tr>
 <tr class="odd">
 <td class="rowlabel">Median [Min, Max]</td>
-<td>25.5 [12.8, 69.0]</td>
-<td>24.8 [12.5, 73.4]</td>
-<td>25.0 [12.5, 73.4]</td>
+<td>26 [13, 69]</td>
+<td>25 [13, 73]</td>
+<td>25 [13, 73]</td>
 </tr>
 <tr class="even">
 <td class="rowlabel lastrow">Missing</td>
@@ -1444,7 +1444,7 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 </div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-supptab" id="supptab-missing-ness-by-race-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Table S1: Table 1 by self-identified race
+Table S1: Characteristics of Participants Included in the Baseline Reference Population by self-identified race
 </figcaption>
 </figure>
 </div>
