--- a/who-is-healthy-anyways.html
+++ b/who-is-healthy-anyways.html
@@ -195,7 +195,7 @@ div.csl-indent {
 <h2 class="anchored" data-anchor-id="abstract">Abstract</h2>
 <p><strong>RATIONALE:</strong> Racialized populations disproportionately experience exposures that impair lung function. Race-neutral reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. However, it is unclear what proportion of racial gaps in lung function is due to social determinants of health (SDoH). Previous studies on the racial gap in lung function between White and Black Americans have attributed 35-39% of the gap in adults to sitting height, 3-8% to poverty, and 2-5% to education. In children, sitting height reportedly accounted for 42-53% of the racial gap, while diet and socio-economic accounted for 7-10% of the gap. We hypothesized that disproportionate impact of SDoH that are captured in NAHNES data could help explain a larger proportion of racial gaps in lung function than previously reported. Better quantifying the contribution of measurable social determinants to racial differences in lung function can inform the debate on the proper assessment of lung function impairment across racial groups.</p>
 <p><strong>METHODS:</strong> We defined reference populations from 18,359 Black and White NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV<sub>1</sub> and FVC between Black and White adults (≥20) and youth (&lt;20).</p>
-<p><strong>RESULTS:</strong> From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099. The percentage of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults. The racial gap in FEV<sub>1</sub> and FVC was reduced by 25% and 26% in children and youth, and by 26% and 19% in adults over 20 years of age.</p>
+<p><strong>RESULTS:</strong> From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099. The percentage of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults. The gap between Black and White Americans in FEV<sub>1</sub> and FVC was reduced by 25% and 26% in children and youth, and by 26% and 19% in adults over 20 years of age.</p>
 <p><strong>CONCLUSIONS:</strong> The SDoH investigated herein explain up to 25% of the racial gap in lung function among American youth. Further research on adults is required.</p>
 <hr>
 </section>
@@ -810,7 +810,11 @@ Table&nbsp;1: Characteristics of Participants Included in the Baseline Reference
 </figure>
 </div>
 </div>
-<p>From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099, while the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in <a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;2</a>. The reduction in the proportion of Black participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black individuals in the US. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 26% and 19% in adults, and 25% and 26% in youth.</p>
+<p>From the base reference population to the most restrictive, the number of included participants decreased from 4,843 to 1,099, while the proportion of Black participants decreased from 19% to 9% in youth and 14% to 4% in adults, as shown in <a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;2</a>. The reduction in the proportion of Black participants after multiple exclusions based on SDoH confirms disproportionate impact of these factors on Black individuals in the US.</p>
+<p>In the baseline reference population, average FEV<sub>1</sub> and FVC were 0.35 L and 0.42 L higher in White youth compared with Black youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.50 L for FEV<sub>1</sub> and 0.69 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV<sub>1</sub> and FVC was reduced by 25% and 26% in youth and by 26% and 19% in adults (<a href="#fig-racialgap" class="quarto-xref">Figure&nbsp;2</a>).</p>
+<p>Excluding individuals with various SDoH did not reduce the proportion of Asian individuals (<a href="#suppfig-Asian" class="quarto-xref">Figure S5</a>). In the baseline reference population, average FEV<sub>1</sub> and FVC were 0.18 L and 0.31 L higher in White youth compared with Asian youth, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 0.37 L for FEV<sub>1</sub> and 0.50 for FVC. After excluding those with unfavourable SDoH, the racial gap in FEV<sub>1</sub> and FVC was reduced by 7% and 13% in youth but, surprisingly, increased by 14% and 11% in adults (<a href="#suppfig-Asian" class="quarto-xref">Figure S5</a>).</p>
+<p>Among successive reference populations, the proportion of Mexican-Americans substantially decreased, confirming disproportionate impact of these exposures on Mexican-American population, compared to White population. Mexican-American youth had slightly higher FEV<sub>1</sub> and FVC at baseline compared to White youth. Average FEV<sub>1</sub> and FVC were 0.06 L and 0.04 L higher in Mexican-American youth compared to White youth, after adjusting for age, height, and biological sex at birth. Mexican-American and White adults had similar adjusted FEV<sub>1</sub> and FVC at baseline (<a href="#suppfig-Mexican" class="quarto-xref">Figure S6</a>). Excluding individuals with unfavourable SDoH resulted in higher FEV<sub>1</sub> and FVC values for Mexican-American population compared to White population. Adjusted average FEV<sub>1</sub> and FVC values for Mexican-American youth were 0.09 L and 0.06 L higher than White youth. For adults, average FEV<sub>1</sub> and FVC were both higher by 0.03 L (<a href="#suppfig-Mexican" class="quarto-xref">Figure S6</a>).</p>
+<p>The appendix includes additional results for non-Mexican Hispanic population (<strong>?@suppfig-Hispanic</strong>) and those who identified as “Other-including multiracial” (<a href="#suppfig-Other" class="quarto-xref">Figure S8</a>).</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-racialgap" class="quarto-float quarto-figure quarto-figure-center anchored">
@@ -852,10 +856,6 @@ Figure&nbsp;3: Changes in lung function racial gaps after exclusions based on ho
 <section id="country-of-birth" class="level4">
 <h4 class="anchored" data-anchor-id="country-of-birth">Country of Birth</h4>
 <p>We also explored the intersection of self-identified race and country of birth. After excluding those with various social and environmental exposures, the racial gap in FEV<sub>1</sub> and FVC was reduced by 24% and 25% in US-born youth, and by 35% and 23% in US-born adults (<a href="#suppfig-usborn" class="quarto-xref">Figure S4</a>). Black and White individuals born outside of the US had higher FEV<sub>1</sub> and FVC, were less exposed to second-hand and maternal smoking, had healthier diets, but also had more occupational exposures (<a href="#supptab-fig1byusborn" class="quarto-xref">Table S2</a>). Black individuals born out of the US had higher income and were more likely to be covered by health insurance than US-born Black individuals while among White participants, those who were born in the US had higher income and higher insurance coverage (<a href="#supptab-fig1byusborn" class="quarto-xref">Table S2</a>).</p>
-</section>
-<section id="other-race-categories" class="level4">
-<h4 class="anchored" data-anchor-id="other-race-categories">Other Race Categories</h4>
-<p>Excluding individuals with various SDoH did not reduce the proportion of Asian individuals, nor did it reduce FEV<sub>1</sub> or FVC gap between Asian and White individuals in the US (<a href="#suppfig-Asian" class="quarto-xref">Figure S5</a>). Among successive reference populations, the proportion of Mexican-Americans did decrease, confirming disproportionate impact of these exposures on Mexican-American population. Mexican-American and White populations had similar FEV<sub>1</sub> and FVC at baseline, nonetheless, excluding individuals with various exposures resulted in slightly larger FEV<sub>1</sub> and FVC values in Mexican-Americans compared to White individuals (<a href="#suppfig-Mexican" class="quarto-xref">Figure S6</a>). We observed somewhat similar results for non-Mexican Hispanic population (<strong>?@suppfig-Hispanic</strong>).</p>
 </section>
 <section id="leave-one-out-analysis" class="level4">
 <h4 class="anchored" data-anchor-id="leave-one-out-analysis">Leave-one-out Analysis</h4>
@@ -2894,7 +2894,7 @@ youth-NHANES : 2924
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fev1 in adults, the baseline gap was 0.5 L
+For fev1 in adults, the baseline gap was 0.503 L
 ```
 
 
@@ -2903,7 +2903,7 @@ For fev1 in adults, the baseline gap was 0.5 L
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fev1 in adults, the absolute change in gap was -0.01 L
+For fev1 in adults, the absolute change in gap was -0.013 L
 ```
 
 
@@ -2921,7 +2921,7 @@ For fev1 in adults, the percentage change in gap was -2.65%
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fvc in adults, the baseline gap was 0.69 L
+For fvc in adults, the baseline gap was 0.687 L
 ```
 
 
@@ -2930,7 +2930,7 @@ For fvc in adults, the baseline gap was 0.69 L
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fvc in adults, the absolute change in gap was 0.01 L
+For fvc in adults, the absolute change in gap was 0.014 L
 ```
 
 
@@ -2948,7 +2948,7 @@ For fvc in adults, the percentage change in gap was 2%
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fev1 in youth, the baseline gap was 0.35 L
+For fev1 in youth, the baseline gap was 0.351 L
 ```
 
 
@@ -2957,7 +2957,7 @@ For fev1 in youth, the baseline gap was 0.35 L
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fev1 in youth, the absolute change in gap was 0.01 L
+For fev1 in youth, the absolute change in gap was 0.015 L
 ```
 
 
@@ -2975,7 +2975,7 @@ For fev1 in youth, the percentage change in gap was 4.18%
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fvc in youth, the baseline gap was 0.42 L
+For fvc in youth, the baseline gap was 0.418 L
 ```
 
 
@@ -2984,7 +2984,7 @@ For fvc in youth, the baseline gap was 0.42 L
 ::: {.cell-output .cell-output-stderr}
 
 ```
-For fvc in youth, the absolute change in gap was 0.02 L
+For fvc in youth, the absolute change in gap was 0.018 L
 ```
 
 
